# Real-time-filtering

./: README.md
Assignment/: Assignment.sln
Assignment/Assignment/: Assignment.vcxproj  Assignment.vcxproj.filters  Readme.md.txt  filter.cpp
Assignment/Assignment/x64/Release/: Assignment.exe.recipe  Assignment.iobj  Assignment.ipdb
Assignment/Assignment/x64/Release/Assignment.tlog/: Assignment.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
imgDisplay/: CMakeLists.txt
imgDisplay/src/: main.cpp
include/: filter.h
src/: imgDisplay.cpp  vidDisplay.cpp
vidDisplay/: CMakeLists.txt
vidDisplay/src/: filter.cpp  filter.h  main  main.cpp
